--- a/styles.css
+++ b/styles.css
@@ -1,351 +1,307 @@
-body{
-    overflow-x:hidden;
+body {
+	/* background: red; */
+	overflow-x:hidden;
 }
 .container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    /* border: 1px solid black; */
-    margin-top: 50px;
+	display: flex;
+	justify-content: center; /* Horizontally centers the grid container */
+	align-items: center; /* Vertically centers the grid container */
+	/* height: 100vh; */
+	width: 100vw;
 }
-
-/*
-#luna{
-    z-index: -1;
-    position: absolute;
-    height: 195px;
-    width: 195px;
-    left: 120px;
-    top: 55px;
-    border-radius: 50%;
-    display: inline-block;
-    border: 1px dashed dimgray;
+#primero {
+	height: 100vh;
 }
-*/
-#luna{
-    z-index: -2;
-    position: absolute;
-    height: 600px;
-    width: 600px;
-    left: 0px;
-    top: -100px;
-    /* background-color: red; */
-    /* background: linear-gradient(rgba(0,0,0,1) 0%, rgba(255,0,0,0) 100%); */
-    border-radius: 50%;
-    display: inline-block;
-    border: 1px dashed lightgrey;
-    /* border-style:  double;
-    border-color: dimgray; */
+.grid-container {
+	display: grid;
+	/* width: 100%; */
+	/* gap: 10px; */
 }
-
-.box{
-    position: relative;
-    width: 100%;
-    max-width:80%;
-    height: fit-content;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    /* border: 1px solid red; */
+#grid1 {
+	grid-template-columns: 12vw auto 12vw; /* Creates three equal columns */
 }
-
-#primero{
-    margin-top: 140px;
+#marco {
+	position: relative; /* Necesito esto para que la imagen no empuje a los elementos de .subgrid hacia abajo */
 }
-
-.box-cols{
-    align-self: flex-end;
-    width: fit-content;
-    /* border: 1px solid blue; */
+#edificio {
+	width: 100%;
 }
-
-#botones{
-    display:flex;
-    justify-content: space-between;
-    position:relative;
-    left: 58px;
-    width: 125%;
-    /* border: 1px solid blue; */
+.subgrid {
+	height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-rows: 25% auto;
+	position: absolute; /* Necesito esto para que la imagen no empuje a los elementos de .subgrid hacia abajo */
+	top: 0;
+	left: 0;
 }
-
+.row {
+	overflow: clip;
+	overflow-clip-margin: 100vw;
+}
 #nombre{
-    white-space: nowrap;
-    margin-bottom: -34px;
-    margin-left: -180px;
-    font-family: 'valencia-serial-extralightRg';
-    font-size: 144px;
-    letter-spacing: .4rem;
+	/* white-space: nowrap; */
+	font-family: 'valencia-serial-extralightRg';
+	font-size: 7.6vw;
+	letter-spacing: .2vw;
+	/* position: sticky; */
+	position: relative;
+	top: 20%;
+	/* margin-left: 6.8%; */
+	padding-left: 6.8%;
 }
-
-
+canvas {
+	/* background-color: yellow; */
+	/* display: inline-block; */
+}
+#pasto {
+	z-index: -20;
+	position: absolute;
+	bottom: 1%;
+	width: 100%;
+	height: 100%;
+	opacity: 0.5;
+}
+#arbol {
+	z-index: -10;
+	position: absolute;
+	/* align-self: bottom; */
+	left: 25%;
+	bottom: 1%;
+	/* left: 40%; */
+	/* margin-left: 77%; */
+	/* width: 100%; */
+	/* height: 100%; */
+	/* background-color: red; */
+	/* margin: 0px; */
+	/* padding: 0px; */
+	/* gap: 0px; */
+	opacity: 0.8;
+}
+#luna{
+	z-index: -12;
+	position: absolute;
+	/* position: sticky; */
+	height: 32vw;
+	width: 32vw;
+	left: -1vw;
+	top: -10%;
+	/* background-color: red; */
+	/* background: linear-gradient(rgba(0,0,0,1) 0%, rgba(255,0,0,0) 100%); */
+	border-radius: 50%;
+	/* display: inline-block; */
+	border: 1px dashed lightgrey;
+	/* border-style:  double;
+	border-color: dimgray; */
+}
 #texto-about{
-    position: absolute;
-    align-self: flex-start;
-    white-space: nowrap;
-    font-family: 'valencia-serial-extralightRg';
-    font-size: 64px;
-    margin-right: 680px;
-    top: 50px
-    /* border: 1px solid blue; */
+	position: absolute;
+	white-space: nowrap;
+	font-family: 'valencia-serial-extralightRg';
+	font-size: 3.4vw;
+	margin-left: 17%;
+	top: 31%;
 }
-
 #subtexto-about{
-    position: absolute;
-    align-self: flex-start;
-    white-space: nowrap;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
-    font-size: 36px;
-    margin-right: 540px;
-    top: 110px;
-    color: hsl(0, 0%, 33%);
-    /* border: 1px solid blue; */
+	position: absolute;
+	white-space: nowrap;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 300;
+	font-size: 2vw;
+	/* margin-right: 540px; */
+	/* top: 110px; */
+	margin-left: 24.2%;
+	top: 39%;
+	color: hsl(0, 0%, 33%);
 }
-
 #texto-sotano{
-    position: absolute;
-    align-self: flex-start;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    left: 280px;
-    top: 140px;
-    text-align: justify;
-    width: 375px;
-    height: 350px;
-    /* white-space: pre-wrap; */
-    /* border: 1px solid blue; */
+	position: absolute;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 300;
+	/* font-size: 18px; */
+	font-size: 0.95vw;
+	/* left: 280px; */
+	left: 17%;
+	top: 43%;
+	text-align: justify;
+	/* width: 375px; */
+	/* height: 350px; */
+	width: 26%;
+	height: 25%;
+	/* white-space: pre-wrap; */
+	line-height: 1.3;
 }
-#edificio{
-    margin-top: 10px;
-    margin-bottom: -2px;
+#grid2 {
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	justify-items: center;
+	align-items: start;
+	/* border: 1px solid red; */
 }
-
-#estructura-fondo{
-    z-index: -2;
-    background-color: white;
-    position:absolute;
-    /* border: 1px solid blue; */
-    width: 72.8%;
-    height: 100%
+#separador1 {
+	grid-area: 1 / 1 / 2 / 3;
+	padding: 10vh;
+	/* border: 1px solid red; */
 }
-#marco{
-    position: absolute;
-    align-self: flex-end;
+#col1 {
+	position: relative;
+	grid-area: 2 / 1 / 3 / 2;
+	top: -30vw;
+	margin-left: 15%;
 }
-
-#arbol{
-    z-index: -10;
-    position:absolute;
-    bottom: -20px;
-    left: 370px;
+#col2 {
+	position: relative;
+	top: -28vw;
+	grid-area: 2 / 2 / 3 / 3;
+	display: grid;
+	row-gap: 5vw;
+	margin-left: 15%;
 }
-
-#clip1{
-    position:absolute;
-    background-color: white;
-    width: 100px;
-    height: 300px;
-    bottom: -100px;
-    left: -62px;
+#titulo-cercha{
+	/* z-index: -20; */
+	position: relative;
+	margin-bottom: -3%;
+	left: 15.5%;
+	/* el palito vertical de la E debería quedar alineado con el nudo del centro de la cercha */
+	/* margin-left: 323px; */
+	font-family: 'valencia-serial-extralightRg';
+	font-size: 4.5vw;
+	/* font-size: 72px; */
+	letter-spacing: .1vw;
+	/* border: 1px solid red; */
 }
-#clip2{
-    position:absolute;
-    background-color: white;
-    width: 100px;
-    height: 300px;
-    bottom: -100px;
-    right: -64px;
-}
-#clip3{
-    position:absolute;
-    background-color: white;
-    width: 200px;
-    height: 108px;
-    bottom: -100px;
-    right: -64px;
-}
-#clip4{
-    position:absolute;
-    background-color: white;
-    width: 200px;
-    height: 108px;
-    bottom: -100px;
-    left: -62px;
-}
-
-
-.grass {
-    width: 1vw;
-    height: 100%;
-    position: absolute;
-    bottom: 140px;
-/*  background-color: green; */
-/*  background: linear-gradient(to bottom, forestgreen 75%, olive); */
-/*  background-size: 200% auto; */
-/* box-shadow: 0 0 15px lightgrey; */
-/*  border-radius: 100% 100% 0 0; */
-    transform-origin: center bottom;
-    pointer-events: none;
-    animation: sway 15s linear infinite;
-}
-@keyframes sway {
-    25% {
-        transform: skewX(3deg);
-    }
-    75% {
-        transform: skewX(-3deg);
-    }
-}
-
-#experiencia{
-    flex-direction: row;
-    vertical-align: top;
-    align-items:  flex-start;
-}
-
 #cercha{
-    flex-direction: column;
-    margin-top: 80px;
-/*    width: calc(80vw); */
+	filter: drop-shadow( 2px 2px 1px rgba(0, 0, 0, .3));
 }
-
-#titulo-cercha{
-    position: absolute;
-    margin-bottom: 140px;
-    left: 365px;
-    /* el palito vertical de la E debería quedar alineado con el nudo del centro de la cercha */
-    font-family: 'valencia-serial-extralightRg';
-    font-size: 72px;
-    letter-spacing: .1rem;
-}
-
-#titulo-cercha{
-    position: absolute;
-    margin-bottom: 140px;
-    left: 365px;
-    /* el palito vertical de la E debería quedar alineado con el nudo del centro de la cercha */
-    /* margin-left: 323px; */
-    font-family: 'valencia-serial-extralightRg';
-    font-size: 72px;
-    letter-spacing: .1rem;
-}
-
-#cercha-imagen{}
-
-#lista-empotramiento{
-    flex-direction: column;
-    gap: 60px;
-    margin-top: 60px;
-}
-
 #empotramiento{
-    flex-direction: column;
-    align-items: left;
-    justify-content: left;
-    text-align: justify;
-    width: 400px;
-    margin-bottom: 15px;
+	/* border: 1px solid red; */
 }
-
-#empot-svg{
-    filter: drop-shadow( 0px 0px 0px rgba(0, 0, 0, 0));
-}
-
 #texto-empot{
-    position: absolute;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 24px;
-    font-weight: 900;
-    top: -5px;
-    left: 15px;
+	position: relative;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1.25vw;
+	font-weight: 900;
+	top: 1.3vw;
+	left: 2.5%;
+	/* border: 1px solid red; */
+}
+#titulo-empot{
+	position: relative;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1vw;
+	font-weight: 900;
+	margin-top: -1.7vw;
+	left: 4%;
+	/* border: 1px solid red; */
 }
 #texto-empot-body{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    margin-top: -30px;
-    width: 92%;
+	position: relative;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1vw;
+	font-weight: 300;
+	/* margin-top: -12%; */
+	width: 50%;
+	/* border: 1px solid red; */
+	/* left: 1%; */
+	left: 4%;
+	text-align: justify;
+	line-height: 1.3;
+	/* border: 1px solid red; */
 }
 #texto-iso-body{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    text-align: justify;
-    width: 98%;
-    margin-bottom: 5px;
+	position: relative;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1vw;
+	font-weight: 300;
+	/* margin-top: -12%; */
+	width: 50%;
+	/* border: 1px solid red; */
+	/* left: 1%; */
+	/*  left: 2%; */
+	text-align: justify;
+	line-height: 1.3;
 }
-
-#separador{
-    margin-top: 80px;
-    margin-bottom: 80px;
+#empot-svg{
+	/* filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, .3)); */
 }
-
+li{
+	margin-bottom: 0.5vw;
+	list-style-type: none;
+}
+#grid3 {
+	grid-template-columns: 2fr 1fr 2fr;
+	grid-template-rows: auto; /* Automatically sized rows */
+	justify-items: center;
+	align-items: center; /* Vertically centers the grid container */
+	margin: 0 auto;
+	/* width: 73vw; */
+	width: 62vw;
+	/* grid-row-gap: 70px; */
+	grid-row-gap: 6.75vh;
+	/* grid-column-gap: 220px; */
+	grid-column-gap: 0px;
+	padding-bottom: 5vh;
+}
+#separador2 {
+	grid-column: 1 / span 3; /* Takes up all three columns */
+	/* padding: 10vh; */
+	/* border: 1px solid red; */
+	/* gap: 0px; */
+}
 #proyectos-titulo{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 144px;
-    font-weight: 600;
+	position: relative;
+	grid-column: 1 / span 3; /* Takes up all three columns */
+	font-family: 'Source Sans Pro', sans-serif;
+	/* font-size: 144px; */
+	font-size: 8vw;
+	font-weight: 600;
+	text-align: center;
+	top: 7vw;
+	/* top: 75%; */
+	/* margin-bottom: -9%; */
+	z-index: -20;
 }
-
-#ipn{
-    filter: drop-shadow( 0px 0px 0px rgba(0, 0, 0, 0));
-}
-#marco{
-    filter: drop-shadow( 0px 0px 0px rgba(0, 0, 0, 0));
-}
-
-#cartelitos{
-    margin-top: -70px;
-    margin-bottom: 220px;
-    flex-direction: row;
-}
-
 #rectangle{
-    margin-left: 60px;
-    margin-right: 60px;
-    width:195px;
-    height:390px;
+    /* width:195px; */
+    width: 10.25vw;
+    /* height:390px; */
+    height: 37.5vh;
     background:white;
     border: 1px solid black;
     animation-name: sombrita-out;
     animation-duration: 0.2s;
 }
-
 #rectangle:hover{
-    /* background:red; */
-    animation-name: sombrita-in;
-    animation-duration: 0.2s;
-    animation-fill-mode: forwards;
-    animation-timing-function: linear;
+	/* background:red; */
+	animation-name: sombrita-in;
+	animation-duration: 0.2s;
+	animation-fill-mode: forwards;
+	animation-timing-function: linear;
 }
-
 @keyframes sombrita-in{
-  from {box-shadow: 0px 0px 0px #000;
-        backgound: white;}
-  to {box-shadow: 5px 5px 0px #000;
-        background: red}
+	from {box-shadow: 0px 0px 0px #000;
+	backgound: white;}
+	to {box-shadow: 5px 5px 0px #000;
+	background: red}
 }
-
 @keyframes sombrita-out{
-  from {box-shadow: 5px 5px 0px #000;
-        background: red;}
-  to {box-shadow: 0px 0px 0px #000;
-        background: white;}
+	from {box-shadow: 5px 5px 0px #000;
+	background: red;}
+	to {box-shadow: 0px 0px 0px #000;
+	background: white;}
 }
-
 b{
-    font-weight: 900;
+	font-weight: 900;
 }
-
+object{
+	/* filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, .3)); */
+}
 img{
-    filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, .3));
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    -moz-user-drag: none;
-    -o-user-drag: none;
-    user-drag: none;
+	/* filter: drop-shadow( 2px 2px 2px rgba(0, 0, 0, .3)); */
+	pointer-events: none;
+	-webkit-user-drag: none;
+	-khtml-user-drag: none;
+	-moz-user-drag: none;
+	-o-user-drag: none;
+	user-drag: none;
 }
